--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
 <h3>Phone No :- 7767894072</h3>
 <h3>Email :- <a href="https://mail.google.com/mail/u/0/#inbox"> mayurmali477@gmail.com </a>
 <h3>Skils</h3>
-<ol><b>
+<ol type="1"><b>
 <li>Core Java</li>
 <li>HTML</li>
 <li>CSS</li>
 <li>Js</li>
-
-
+<button>Done</button>
  </ol></b>
 
 </body>
