--- a/Home.html
+++ b/Home.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 
-    <H1 style="color:maroon;">Welcome Home Page!</H1>
+    <style>
+        h1{ color: maroon; }
+    </style>
+
+    <H1>Welcome Home Page!</H1>
     
 </body>
 </html>
