--- a/Register.html
+++ b/Register.html
@@ -10,7 +10,7 @@
 
 <center>
 <form action="Login.html" method="get">
-<H1 style="color: rgb(250, 16, 16);">REGISTRATION FORM</H1>
+<H1 style="color: rgb(226, 65, 172);">REGISTRATION FORM</H1>
 </center>
 <hr><hr>
 
@@ -57,16 +57,18 @@
     <input type="checkbox" name="lang" value="Japnis">Japnis
     <br><br>
 
-    <label for>Password</label required>
+    <label>Password</label required>
     <input type="password" placeholder="Enter Your password" name="Password" required>
     <br><br>
 
-    <h2>Enter Your Feed Back : </h2>
-     <textarea name="feedback"></textarea>
-     <br>
 
     <button type="submit">Submit</button>
-    <button type="reset">Reset</button>
+    <button type="reset" style="color: rgb(250, 16, 16);">Reset</button>
+
+    <style>
+        h2{ color: cadetblue;}
+        label{ color: black; font-style: oblique; }
+    </style>
 
 </form>
 </body>
